--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                         </div>
                         <div class="member-text">
                             <h4>Francisco Jose Castro</h4>
-                            <p>Business manager student </p>
+                            <p>Co-Founder of Colcart - Business manager student </p>
                         </div>
                     </div>
                 </div>
@@ -503,7 +503,7 @@
                         </div>
                         <div class="member-text">
                             <h4>Karen Courrau</h4>
-                            <p>Environmental fighter</p>
+                            <p>Co-Founder of Colcart - Environmental Engineer</p>
                         </div>
                     </div>
                 </div>
@@ -522,7 +522,7 @@
                         </div>
                         <div class="member-text">
                             <h4>Santiago Garcia Chicangana</h4>
-                            <p>Systems Engineer</p>
+                            <p>Co-Founder of Colcart - Systems Engineer</p>
                         </div>
                     </div>
                 </div>
@@ -541,7 +541,7 @@
                         </div>
                         <div class="member-text">
                             <h4>Sebastian Cajas</h4>
-                            <p>Electronics Engineer and AI Enthusiast</p>
+                            <p>Co-Founder of Colcart -Electronics Engineer and AI Enthusiast</p>
                         </div>
                     </div>
                 </div>
