--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link  rel="icon"   href="img/favicon.png" type="image/png" />	
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -400,59 +401,16 @@
                 <div class="special_description_img">
                     <img src="img/cauca.png" alt="">
                 </div>
-                <div class="text_justified">
-                  
-                    <br>
-									<p>
-                                        Although Cauca has been one of the most affected departments at a national level by violence caused by insurgent groups, drug traffickers and corrupt politicians, it has best managed to replace all of its effects. This department has the characteristic of having great wealth in all of its sectors including the economic, cultural and environmental ones. The city of Popayán, capital of the department of Cauca with a growth population of 10%, has been gaining recognition among Colombian visitors from abroad, not only for its religious traditions such as Holy Week and its Gastronomic Congress, but for it is the entrance to different tourist sites such as the National Archaeological Park from Tierradentro, National Park of Puracé and Historic Center of Popayán. 
-										</p>
-		
-                                    </div>
-
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Pricing Plane Area End ***** -->
-
-    <!-- ***** Client Feedback Area Start ***** -->
-    <section class="clients-feedback-area bg-white section_padding_100 clearfix" id="Economic_Unit">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 text-center">
-                    <!-- Heading Text  -->
-                    <div class="section-heading">
-                        <h2>Economic Unit</h2>
-                        <div class="line-shape"></div>
+                    <div class="text_justified">                  
+                        <br>
+                                        <p>
+                                            Although Cauca has been one of the most affected departments at a national level by violence caused by insurgent groups, drug traffickers and corrupt politicians, it has best managed to replace all of its effects. This department has the characteristic of having great wealth in all of its sectors including the economic, cultural and environmental ones. The city of Popayán, capital of the department of Cauca with a growth population of 10%, has been gaining recognition among Colombian visitors from abroad, not only for its religious traditions such as Holy Week and its Gastronomic Congress, but for it is the entrance to different tourist sites such as the National Archaeological Park from Tierradentro, National Park of Puracé and Historic Center of Popayán. 
+                                            </p>		
                     </div>
                 </div>
-                <div class="special_description_img">
-                    <img src="img/unit1.png" alt="">
-                </div>
-                <div class="text_justified">
-                    <br>
-									<p>
-											To calculate the economic Unit we will consider the number 
-											of clients using the web/mobile platform times the commission 
-											for every sold product. For this, we have decided to take 8% commission. 
-											It shall also be considered that according to the National Management Department of Statistics in Colombia (DANE),
-											only in Popayan there are 70,000 families and each family spends $100 per family food basket.  We have encountered several Thus, 8% commision corresponds to $8. Finally the total earth profit per month we would be getting is $8x70,000 families, which is $560,000. In this sense, we may consider the analysis per a smaller population, say only 1000 consumers per month. in this sense, the total revenue rounds 30,000 USD and therefore, more than 27,600 USD are earned amongst the farmers population, showing an increasing in a 160 per cent of their general revenue. This is mainly due to the fact that most of intermediaries generaly increase the final product to up to three times the original price, leaving the farmers revenue with the lowest earnings despite of being the main provider in the food supply chain. 
-											forms in order to understhat what ranges would our market segment be located considering some especific exclusion criteria,
-											in particular, the economic relevance (people with medium to high economic adquisition), as well as age, highlighting our
-											interest in the young population - due to its cognitive easy when regarding digital tools. 
-
-                                        </p>
-                                        <br>
-                                        <p>
-                                            Thus, 8% commision corresponds to $8. Finally the total earth profit per month we would be getting is $8x70,000 families, which is $560,000. In this sense, we may consider the analysis per a smaller population, say only 1000 consumers per month. in this sense, the total revenue rounds 30,000 USD and therefore, more than 27,600 USD are earned amongst the farmers population, showing an increasing in a 160 per cent of their general revenue. This is mainly due to the fact that most of intermediaries generaly increase the final product to up to three times the original price, leaving the farmers revenue with the lowest earnings despite of being the main provider in the food supply chain. 
-                                        </p>
-		
-									</div>
-                </div>
             </div>
         </div>
     </section>
-    <!-- ***** Client Feedback Area End ***** -->
 
 
     <!-- ***** Our Team Area Start ***** -->
@@ -557,20 +515,20 @@
                 <div class="col-md-6">
                     <!-- Heading Text  -->
                     <div class="section-heading">
-                        <h2>Get in touch with us!</h2>
+                        <h2>Communicate with us</h2>
                         <div class="line-shape"></div>
                     </div>
                     <div class="footer-text">
-                        <p>We'll send you epic weekly blogs, whitepapers and things to make your app startup thrive, all FREE!</p>
+                        <p></p>
                     </div>
                     <div class="address-text">
-                        <p><span>Address:</span> 40 Baria Sreet 133/2 NewYork City, US</p>
+                        <p><span>Address:</span> Popayán, Colombia</p>
                     </div>
                     <div class="phone-text">
-                        <p><span>Phone:</span> +11-225-888-888-66</p>
+                        <p><span>Phone:</span> +57 317 330 8094 - +57 321 5726134</p>
                     </div>
                     <div class="email-text">
-                        <p><span>Email:</span> info.deercreative@gmail.com</p>
+                        <p><span>Email:</span> colcart2020@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-6">
