--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-    <link  rel="icon"   href="img/favicon.png" type="image/png" />	
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -270,7 +269,7 @@
         </div>
     </div>
     <!-- ***** Video Area End ***** -->
-
+<br><br><br><br><br>
     <!-- ***** Cool Facts Area Start ***** -->
     <section class="cool_facts_area clearfix">
         <div class="container">
@@ -514,9 +513,10 @@
                                         </p>
                                         <br>
                                         <p>
-                                            Although Cauca has been one of the most affected departments at a national level by violence caused by insurgent groups, drug traffickers and corrupt politicians, it has best managed to replace all of its effects. This department has the characteristic of having great wealth in all of its sectors including the economic, cultural and environmental ones. The city of Popayán, capital of the department of Cauca with a growth population of 10%, has been gaining recognition among Colombian visitors from abroad, not only for its religious traditions such as Holy Week and its Gastronomic Congress, but for it is the entrance to different tourist sites such as the National Archaeological Park from Tierradentro, National Park of Puracé and Historic Center of Popayán. 
-                                            </p>		
-                    </div>
+                                            Thus, 8% commision corresponds to $8. Finally the total earth profit per month we would be getting is $8x70,000 families, which is $560,000. In this sense, we may consider the analysis per a smaller population, say only 1000 consumers per month. in this sense, the total revenue rounds 30,000 USD and therefore, more than 27,600 USD are earned amongst the farmers population, showing an increasing in a 160 per cent of their general revenue. This is mainly due to the fact that most of intermediaries generaly increase the final product to up to three times the original price, leaving the farmers revenue with the lowest earnings despite of being the main provider in the food supply chain. 
+                                        </p>
+		
+									</div>
                 </div>
             </div>
         </div>
@@ -637,11 +637,11 @@
                 <div class="col-md-6">
                     <!-- Heading Text  -->
                     <div class="section-heading">
-                        <h2>Communicate with us</h2>
+                        <h2>Get in touch with us!</h2>
                         <div class="line-shape"></div>
                     </div>
                     <div class="footer-text">
-                        <p></p>
+                        <p>We'll send you epic weekly blogs, whitepapers and things to make your app startup thrive, all FREE!</p>
                     </div>
                     <div class="address-text">
                         <p><span>Address:</span> Popayan Cauca</p>
